objects/QuoteLineItemsToOrderLineItemsMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APN_Number__c</fullName>
        <label>APN_Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines_Quantity__c</fullName>
        <label>BigMachines_Quantity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Line_Update_Status__c</fullName>
        <label>Contract_Line_Update_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <label>CurrencyIsoCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Qty__c</fullName>
        <label>Current_Qty</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_List__c</fullName>
        <label>Ext_List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Net_Price__c</fullName>
        <label>Ext_Net_Price</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_End_of_Support__c</fullName>
        <label>Extended_End_of_Support</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Applied__c</fullName>
        <label>Fees_Applied</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_Care_Rate__c</fullName>
        <label>Genesys_Care_Rate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Increase__c</fullName>
        <label>Increase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line_Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List_Price</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Price__c</fullName>
        <label>Net_Unit_Price</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Qty__c</fullName>
        <label>Original_Qty</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Specific_Discount__c</fullName>
        <label>Product_Specific_Discount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_txt__c</fullName>
        <label>Product_txt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Product__c</fullName>
        <label>Quote_Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_Net_License_Value__c</fullName>
        <label>Revised_Net_License_Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Line_ID__c</fullName>
        <label>Service_Contract_Line_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <label>Total_Discount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measure__c</fullName>
        <label>Unit Of Measure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sales_price__c</fullName>
        <label>sales_price</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>QuoteLineItemsToOrderLineItemsMapping</label>
</CustomObject>